sfdx-source/force-app/main/default/objects/ironclad__Workflow_View_Timestamp__c/fields/ironclad__Documents_Viewed_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>ironclad__Documents_Viewed_Timestamp__c</fullName>
    <label>Documents Viewed Timestamp</label>
    <type>DateTime</type>
</CustomField>