sfdx-source/force-app/main/default/objects/ironclad__Workflow_View_Timestamp__c/fields/ironclad__Emails_Viewed_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>ironclad__Emails_Viewed_Timestamp__c</fullName>
    <label>Emails Viewed Timestamp</label>
    <type>DateTime</type>
</CustomField>