sfdx-source/force-app/main/default/objects/ironclad__Workflow_View_Timestamp__c/fields/ironclad__Ironclad_Workflow__c.field-meta.xml
<CustomField>
    <fullName>ironclad__Ironclad_Workflow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ironclad Workflow</label>
    <referenceTo>ironclad__Ironclad_Workflow__c</referenceTo>
    <relationshipLabel>Workflow View Timestamps</relationshipLabel>
    <relationshipName>Workflow_View_Timestamps</relationshipName>
    <type>Lookup</type>
</CustomField>