sfdx-source/force-app/main/default/objects/ironclad__Workflow_View_Timestamp__c/fields/ironclad__User__c.field-meta.xml
<CustomField>
    <fullName>ironclad__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Workflow_View_Timestamps</relationshipName>
    <type>Lookup</type>
</CustomField>